[gd_scene load_steps=6 format=3 uid="uid://buyoo4iostmkv"]

[ext_resource type="Script" path="res://settings.gd" id="1_fwbu0"]
[ext_resource type="Texture2D" uid="uid://sh17vcwmn1qx" path="res://Игровые асеты/bg_barracks.png" id="2_mfx2d"]
[ext_resource type="Texture2D" uid="uid://cvm8me5gpuyq4" path="res://Игровые асеты/Способности/skill_icon_skchr_headbr_2.png" id="3_sckj4"]
[ext_resource type="AudioStream" uid="uid://do8l738xye4un" path="res://Игровые асеты/Audio/1.mp3" id="5_0obou"]
[ext_resource type="Texture2D" uid="uid://dpawjtwjya05y" path="res://Игровые асеты/Без имени-5.png" id="7_h55a7"]

[node name="Control" type="CanvasLayer"]
follow_viewport_scale = 5.0
script = ExtResource("1_fwbu0")

[node name="BgBarracks" type="Sprite2D" parent="."]
position = Vector2(922, 482)
scale = Vector2(2, 2)
texture = ExtResource("2_mfx2d")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -250.0
offset_right = 450.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureButton" type="TextureButton" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0
texture_normal = ExtResource("3_sckj4")
ignore_texture_size = true
stretch_mode = 0

[node name="Master" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 57.0
offset_top = 103.0
offset_right = 224.81
offset_bottom = 130.16
min_value = -10.0
max_value = 10.0

[node name="Label" type="Label" parent="Panel/Master"]
layout_mode = 0
offset_top = 24.0
offset_right = 168.335
offset_bottom = 47.0
text = "0"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Panel/Master"]
layout_mode = 0
offset_top = -21.0
offset_right = 168.335
offset_bottom = 2.0
text = "VOLUME_MASTER"
horizontal_alignment = 1

[node name="UI" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 57.0
offset_top = 176.0
offset_right = 224.81
offset_bottom = 203.16
min_value = -10.0
max_value = 10.0

[node name="Label" type="Label" parent="Panel/UI"]
layout_mode = 0
offset_top = 24.0
offset_right = 168.335
offset_bottom = 47.0
text = "0"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Panel/UI"]
layout_mode = 0
offset_top = -21.0
offset_right = 168.335
offset_bottom = 2.0
text = "VOLUME_UI"
horizontal_alignment = 1

[node name="Music" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 258.0
offset_right = 225.81
offset_bottom = 285.16
min_value = -10.0
max_value = 10.0

[node name="Label" type="Label" parent="Panel/Music"]
layout_mode = 0
offset_top = 24.0
offset_right = 168.335
offset_bottom = 47.0
text = "0"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Panel/Music"]
layout_mode = 0
offset_top = -21.0
offset_right = 168.335
offset_bottom = 2.0
text = "VOLUME_MUSIC"
horizontal_alignment = 1

[node name="SFX" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 339.0
offset_right = 225.81
offset_bottom = 366.16
min_value = -10.0
max_value = 10.0

[node name="Label" type="Label" parent="Panel/SFX"]
layout_mode = 0
offset_top = 24.0
offset_right = 168.335
offset_bottom = 47.0
text = "0"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Panel/SFX"]
layout_mode = 0
offset_top = -21.0
offset_right = 168.335
offset_bottom = 2.0
text = "VOLUME_SFX"
horizontal_alignment = 1

[node name="Save" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 81.0
offset_top = 15.0
offset_right = 176.0
offset_bottom = 46.0
text = "SETTINGS_SAVE"

[node name="Reset" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 192.0
offset_top = 15.0
offset_right = 287.0
offset_bottom = 46.0
text = "SETTINGS_RESET"

[node name="lang" type="MenuBar" parent="Panel"]
layout_mode = 0
offset_left = 604.0
offset_top = 84.0
offset_right = 707.0
offset_bottom = 115.0

[node name="CURRENT_LANG" type="PopupMenu" parent="Panel/lang"]
allow_search = false
item_count = 2
item_0/text = "Русский"
item_0/id = 0
item_1/text = "English"
item_1/id = 1

[node name="blackScreen" type="Sprite2D" parent="." groups=["jopa"]]
visible = false
modulate = Color(1, 1, 1, 0)
top_level = true
texture = ExtResource("7_h55a7")
centered = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("5_0obou")
autoplay = true
bus = &"BackgroundMusic"

[node name="SaveGood" type="AcceptDialog" parent="."]
title = "Изменения сохранены"
initial_position = 1
size = Vector2i(260, 80)
unresizable = true

[connection signal="pressed" from="Panel/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="value_changed" from="Panel/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Panel/UI" to="." method="_on_ui_value_changed"]
[connection signal="value_changed" from="Panel/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Panel/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="Panel/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Panel/Reset" to="." method="_on_reset_pressed"]
[connection signal="id_pressed" from="Panel/lang/CURRENT_LANG" to="." method="_on_current_lang_id_pressed"]
